--- a/github-actions/extract_sp_password.yaml
+++ b/github-actions/extract_sp_password.yaml
@@ -17,20 +17,8 @@ jobs:
         creds: ${{ secrets.AZURE_DUMMY_CREDENTIALS }}
         enable-AzPSSession: true
       
-    - name: Run Azure PowerShell script
-      uses: azure/powershell@v1
-      azPSVersion: 'latest'
-      with:
-        inlineScript: |
-          $credentials = ${{ secrets.AZURE_DUMMY_CREDENTIALS }}
-          $objectSecret = @()
-          $objectSecret = ConvertFrom-Json $credentials
-          [string]$servicePrincipalId = ($objectSecret).clientId
-          [string]$servicePrincipalKey = ($objectSecret).clientSecret
-          [string]$tenantId = ($objectSecret).tenantId
-          Write-Output "servicePrincipalId"
-          $servicePrincipalId | Format-Hex | Select-Object -Expand Bytes | ForEach-Object { '{0:x2}' -f $_ }) -join ''
-          Write-Output "servicePrincipalKey"
-          $servicePrincipalKey | Format-Hex | Select-Object -Expand Bytes | ForEach-Object { '{0:x2}' -f $_ }) -join ''
-          Write-Output "tenantId"
-          $tenantId | Format-Hex | Select-Object -Expand Bytes | ForEach-Object { '{0:x2}' -f $_ }) -join ''
+    - name: Extract
+      env:
+        CREDENTIALS: ${{ secrets.AZURE_DUMMY_CREDENTIALS }}
+      run: ./powershell/get_sp.ps1
+      shell: pwsh
